# AISynth

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  QUICKSTART.md  README.md  bootstrap.ps1  build.bat  build.sh  install.bat
.github/workflows/: build.yml
Assets/: README.md
Installer/: installer.iss
Presets/: cinematic.json  edm.json  trap.json
Source/: Envelope.cpp  Envelope.h  FXChain.cpp  FXChain.h  Filter.cpp  Filter.h  Oscillator.cpp  Oscillator.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h  SpectrumAnalyzer.cpp  SpectrumAnalyzer.h  SynthEngine.cpp  SynthEngine.h  TextToPreset.cpp  TextToPreset.h  Voice.cpp  Voice.h  Wavetable.cpp  Wavetable.h
Source/Components/: KnobComponent.cpp  KnobComponent.h  PresetBrowser.cpp  PresetBrowser.h  SpectrumDisplay.cpp  SpectrumDisplay.h  TextInputBox.cpp  TextInputBox.h  WaveformDisplay.cpp  WaveformDisplay.h
